# boc-examples

./: CMakeLists.txt  README.md  fibonacci  when1
examples/bank/: bank.cc
examples/barrier/: barrier.cc
examples/boids/: boids.cpp
examples/channel/: channel.cc
examples/conchashmap/: conchasmap.cc
examples/dining_phils/: dining_phils.cc
examples/fibonacci/: fibonnaci.cc
examples/joins/: joins.cpp
examples/promises/: promises.cc
examples/readonly/: readonly.cc
examples/santa/: santa.cc
examples/scratch/: scratch.cc
examples/when1/: when1.cc
scripts/: dining.py  plot.py
